Version ClaSS-1.0.36 release (2012/11/19)
-------------------------------------------

New invoice export function.

Added remittance information to the student_fees page.


Version ClaSS-1.0.35 release (2012/11/12)
-------------------------------------------

Fix to the recording of sentypes to prevent blank records.

Added a check of the ini setting for upload_max_filesize in document
drop.

Reworked hte document drop scripts and css.

Fix to seneeds for "Add subject" option.

Shortcut link to fees added to student profile page.

Added invoice list buttons for each paymenttype.



Version ClaSS-1.0.34 release (2012/11/05)
-------------------------------------------

Fix to avoid multiple notifications for share with parents emails.

New summary option in the Register for class attendance.

Assessment scores can now have a linked comment through the short note
in edit_scores.

A student_event_cron in testing - so far only for Support review updates.

Changed the listing invoices to better filter by peymenttype.

New field in file table to make context even more specific, linking to
a single other id.

Re-worked the InfoBook backgrounds (ents) scripts to allow file
attachments.

A new html template functions for a div contianer.

Fix to identifying commendations (affected counting merit with points>4).



Version ClaSS-1.0.33 release (2012/10/10)
-------------------------------------------

Fix to the list of subject classes in column edit.

Removed the ScoreCount field from an Assessment Def as it is confusing.

Added a clicktoedit icon to MarkBook column headers.

Change the cutoffdate option for editing assessment columns so that
anyone with course responsibilities selected can edit any in the
current MarrkBook.

Fix to get_assessment_mids for when the assessment is for a previous
year.

Added coloured grade cells for traffic light grade schemes.

New chart option, just looking at current roll, for the
enrolments_matrix.
