@@ -5,6 +5,13 @@ New invoice export function.
 
 Added remittance information to the student_fees page.
 
+Fix to marking register notices seen where communities span
+yeargroups.
+
+New imap CFG details in school.php for fetching emails.
+
+Tidied html of comment emails.
+
 
 Version ClaSS-1.0.35 release (2012/11/12)
 -------------------------------------------
